[package]
description = "C bindings for the Bpp Ethereum client"
name = "bpp-clib"
version = "1.12.0"
license = "GPL-3.0"
authors = ["Blockvc"]

[lib]
name = "bpp"
crate-type = ["cdylib", "staticlib"]

[dependencies]
panic_hook = { path = "../util/panic_hook" }
parity-ethereum = { path = "../", default-features = false }
jni = { version = "0.10.1", optional = true }

[features]
default = []
final = ["parity-ethereum/final"]
